@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="2.0.4" provider-name="Twilight0">
+<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="2.0.5" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.tulip" version="2.0.24"/>
@@ -16,12 +16,8 @@
         <language>en el</language>
         <license>GNU General Public License, v3</license>
         <size>633158</size>
-        <news>[B]2.0.4[/B] - 09-12-2018
-- Added Radio Center Ville
-- Added podcasts fixed link
-
-[B]2.0.3[/B] - 08-12-2018
-- Fixed unicode strings on main menu</news>
+        <news>[B]2.0.5[/B] - 10-12-2018
+- New broadcasts function fetching latest podcast url for playback</news>
         <assets>
             <icon>icon.png</icon>
             <fanart>fanart.jpg</fanart>
